--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/index.css" />
 </head>
 
 <body>
@@ -13,14 +13,15 @@
         <h1>SETIF 2025 - Semana de Tecnologia da Informação</h1>
     </header>
     <main>
-        <img src="images/banner.jpg" alt="Banner do Site" />
+        <img class="banner" src="images/banner.jpg" alt="Banner do Site" />
         <h3>O evento TECH mais esperado do ano</h3>
         <p>Participe da SETIF 2025 e veja tendências que irão moldar o futuro da tecnologia</p>
         <p><span class="negrito">Data:</span> 10 de outubro de 2025</p>
         <p><span class="negrito">Local:</span> IFPR Campus Paranavaí</p>
-        <button class="botao">Increva-se</button>
-        <button class="botao">Saiba Mais</button>
-
+        <div class="gap" >
+            <button class="botao">Increva-se</button>
+            <button class="botao">Saiba Mais</button>
+        </div>
         <div class="cards">
             <div class="card">
                 <img src="images/palestrante1.jpg" />
