--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>SETIF 2025 - Semana de Tecnologia da Informação</h1>
     </header>
     <main>
-        <img class="banner" src="images/banner.jpg" alt="Banner do Site" />
+        <img onclick="buscarInscritos()" class="banner" src="images/banner.jpg" alt="Banner do Site" />
         <h3>O evento TECH mais esperado do ano</h3>
         <p>Participe da SETIF 2025 e veja tendências que irão moldar o futuro da tecnologia</p>
         <p><span class="negrito">Data:</span> 10 de outubro de 2025</p>
@@ -42,7 +42,10 @@
             </div>
         </div>
 
-        
+        <div id="inscritos">
+            
+        </div>
+
     </main>
 
     <script src="js/index.js"></script>
