--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <p>Participe da SETIF 2025 e veja tendências que irão moldar o futuro da tecnologia</p>
         <p><span class="negrito">Data:</span> 10 de outubro de 2025</p>
         <p><span class="negrito">Local:</span> IFPR Campus Paranavaí</p>
-        <div class="gap" >
+        <div class="gap">
             <button class="botao">Increva-se</button>
-            <button class="botao">Saiba Mais</button>
+            <button id="saiba-mais" class="botao">Saiba Mais</button>
             <button id="btAlterarTema" onclick="alterarTema()" class="botao">Light</button>
         </div>
         <div class="cards">
@@ -43,10 +43,18 @@
         </div>
 
         <div id="inscritos">
-            
+
         </div>
 
     </main>
+
+    <div id="modal" class="modal hidden">
+        <div class="modal-content">
+            <span class="fechar" id="fechar-modal">&times;</span>
+            <h1>SETIF 2025</h1>
+            <p>A SETIF 2025 será realizada no dia 10/11/2025</p>
+        </div>
+    </div>
 
     <script src="js/index.js"></script>
 </body>
