--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 
 <body data-theme="dark">
     <header>
-        <h1>SETIF 2025 - Semana de Tecnologia da Informação</h1>
+        <h1 id="titulo" tabindex="0" data-i18n="titulo">SETIF 2025 - Semana de Tecnologia da Informação</h1>
+        <button aria-label="Botão para alterar o idioma" onclick="alterarIdioma()" aria>PT/EN</button>
     </header>
     <main>
         <img onclick="buscarInscritos()" class="banner" src="images/banner.jpg" alt="Banner do Site" />
-        <h3>O evento TECH mais esperado do ano</h3>
+        <h3 data-i18n="titulo-evento" aria-labelledby="titulo">O evento TECH mais esperado do ano</h3>
         <p>Participe da SETIF 2025 e veja tendências que irão moldar o futuro da tecnologia</p>
         <p><span class="negrito">Data:</span> 10 de outubro de 2025</p>
         <p><span class="negrito">Local:</span> IFPR Campus Paranavaí</p>
@@ -26,7 +27,7 @@
         </div>
         <div class="cards">
             <div class="card">
-                <img src="images/palestrante1.jpg" />
+                <img src="images/palestrante1.jpg" alt="Imagem do Palestrante" data-i18n-alt="imagem-palestrante" />
                 <h3>Palestras</h3>
                 <p>Especialistas do sertor irão discutir tendências da tecnologia</p>
             </div>
