--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body data-theme="dark">
     <header>
         <h1 id="titulo" tabindex="0" data-i18n="titulo">SETIF 2025 - Semana de Tecnologia da Informação</h1>
-        <button aria-label="Botão para alterar o idioma" onclick="alterarIdioma()" aria>PT/EN</button>
+        <button class="botao-alterar-tema" aria-label="Botão para alterar o idioma" onclick="alterarIdioma()" aria>PT/EN</button>
     </header>
     <main>
         <img onclick="buscarInscritos()" class="banner" src="images/banner.jpg" alt="Banner do Site" />
