--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
 <body data-theme="dark">
     <header>
         <h1 id="titulo" tabindex="0" data-i18n="titulo">SETIF 2025 - Semana de Tecnologia da Informação</h1>
-        <button class="botao-alterar-tema" aria-label="Botão para alterar o idioma" onclick="alterarIdioma()" aria>PT/EN</button>
+       
+        <div class="botoes-opcoes">
+        <button class="botao-opcao" aria-label="Botão para alterar o idioma" onclick="alterarIdioma()" aria>PT/EN</button>
+                    <button id="btAlterarTema" onclick="alterarTema()" class="botao-opcao">Light</button>
+</div>
     </header>
     <main>
         <img onclick="buscarInscritos()" class="banner" src="images/banner.jpg" alt="Banner do Site" />
@@ -23,7 +27,6 @@
         <div class="gap">
             <button class="botao">Increva-se</button>
             <button id="saiba-mais" class="botao">Saiba Mais</button>
-            <button id="btAlterarTema" onclick="alterarTema()" class="botao">Light</button>
         </div>
         <div class="cards">
             <div class="card">
